[package]
name = "fzc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
globset = "0.4.15"
ratatui = "0.30.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.9.11+spec-1.1.0"
